// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Compact renders correctly 1`] = `
<DocumentFragment>
  <div
    class="rc-raised"
  >
    <div
      class="rc-raised__bg"
      style="box-shadow: 0 2px 10px rgba(0,0,0,.12), 0 2px 5px rgba(0,0,0,.16); border-radius: 2px; background: rgb(246, 246, 246);"
    />
    <div
      class="rc-raised__content"
    >
      <div
        class="rc-compact compact-picker"
        style="padding-top: 5px; padding-left: 5px; box-sizing: initial; width: 240px;"
      >
        <div>
          <span>
            <div
              class="rc-swatch"
              style="background: rgb(77, 77, 77); width: 15px; height: 15px; float: left; margin-right: 5px; margin-bottom: 5px; position: relative; cursor: pointer;"
              tabindex="0"
              title="#4D4D4D"
            >
              <div
                style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(255, 255, 255); -webkit-border-radius: 50%; border-radius: 50%; opacity: 0;"
              />
            </div>
          </span>
          <span>
            <div
              class="rc-swatch"
              style="background: rgb(153, 153, 153); width: 15px; height: 15px; float: left; margin-right: 5px; margin-bottom: 5px; position: relative; cursor: pointer;"
              tabindex="0"
              title="#999999"
            >
              <div
                style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(0, 0, 0); -webkit-border-radius: 50%; border-radius: 50%; opacity: 0;"
              />
            </div>
          </span>
          <span>
            <div
              class="rc-swatch"
              style="background: rgb(255, 255, 255); width: 15px; height: 15px; float: left; margin-right: 5px; margin-bottom: 5px; position: relative; cursor: pointer; -webkit-box-shadow: inset 0 0 0 1px #ddd; box-shadow: inset 0 0 0 1px #ddd;"
              tabindex="0"
              title="#FFFFFF"
            >
              <div
                style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(0, 0, 0); -webkit-border-radius: 50%; border-radius: 50%; opacity: 0;"
              />
            </div>
          </span>
          <span>
            <div
              class="rc-swatch"
              style="background: rgb(244, 78, 59); width: 15px; height: 15px; float: left; margin-right: 5px; margin-bottom: 5px; position: relative; cursor: pointer;"
              tabindex="0"
              title="#F44E3B"
            >
              <div
                style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(255, 255, 255); -webkit-border-radius: 50%; border-radius: 50%; opacity: 0;"
              />
            </div>
          </span>
          <span>
            <div
              class="rc-swatch"
              style="background: rgb(254, 146, 0); width: 15px; height: 15px; float: left; margin-right: 5px; margin-bottom: 5px; position: relative; cursor: pointer;"
              tabindex="0"
              title="#FE9200"
            >
              <div
                style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(0, 0, 0); -webkit-border-radius: 50%; border-radius: 50%; opacity: 0;"
              />
            </div>
          </span>
          <span>
            <div
              class="rc-swatch"
              style="background: rgb(252, 220, 0); width: 15px; height: 15px; float: left; margin-right: 5px; margin-bottom: 5px; position: relative; cursor: pointer;"
              tabindex="0"
              title="#FCDC00"
            >
              <div
                style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(0, 0, 0); -webkit-border-radius: 50%; border-radius: 50%; opacity: 0;"
              />
            </div>
          </span>
          <span>
            <div
              class="rc-swatch"
              style="background: rgb(219, 223, 0); width: 15px; height: 15px; float: left; margin-right: 5px; margin-bottom: 5px; position: relative; cursor: pointer;"
              tabindex="0"
              title="#DBDF00"
            >
              <div
                style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(0, 0, 0); -webkit-border-radius: 50%; border-radius: 50%; opacity: 0;"
              />
            </div>
          </span>
          <span>
            <div
              class="rc-swatch"
              style="background: rgb(164, 221, 0); width: 15px; height: 15px; float: left; margin-right: 5px; margin-bottom: 5px; position: relative; cursor: pointer;"
              tabindex="0"
              title="#A4DD00"
            >
              <div
                style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(0, 0, 0); -webkit-border-radius: 50%; border-radius: 50%; opacity: 0;"
              />
            </div>
          </span>
          <span>
            <div
              class="rc-swatch"
              style="background: rgb(104, 204, 202); width: 15px; height: 15px; float: left; margin-right: 5px; margin-bottom: 5px; position: relative; cursor: pointer;"
              tabindex="0"
              title="#68CCCA"
            >
              <div
                style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(0, 0, 0); -webkit-border-radius: 50%; border-radius: 50%; opacity: 0;"
              />
            </div>
          </span>
          <span>
            <div
              class="rc-swatch"
              style="background: rgb(115, 216, 255); width: 15px; height: 15px; float: left; margin-right: 5px; margin-bottom: 5px; position: relative; cursor: pointer;"
              tabindex="0"
              title="#73D8FF"
            >
              <div
                style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(0, 0, 0); -webkit-border-radius: 50%; border-radius: 50%; opacity: 0;"
              />
            </div>
          </span>
          <span>
            <div
              class="rc-swatch"
              style="background: rgb(174, 161, 255); width: 15px; height: 15px; float: left; margin-right: 5px; margin-bottom: 5px; position: relative; cursor: pointer;"
              tabindex="0"
              title="#AEA1FF"
            >
              <div
                style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(0, 0, 0); -webkit-border-radius: 50%; border-radius: 50%; opacity: 0;"
              />
            </div>
          </span>
          <span>
            <div
              class="rc-swatch"
              style="background: rgb(253, 161, 255); width: 15px; height: 15px; float: left; margin-right: 5px; margin-bottom: 5px; position: relative; cursor: pointer;"
              tabindex="0"
              title="#FDA1FF"
            >
              <div
                style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(0, 0, 0); -webkit-border-radius: 50%; border-radius: 50%; opacity: 0;"
              />
            </div>
          </span>
          <span>
            <div
              class="rc-swatch"
              style="background: rgb(51, 51, 51); width: 15px; height: 15px; float: left; margin-right: 5px; margin-bottom: 5px; position: relative; cursor: pointer;"
              tabindex="0"
              title="#333333"
            >
              <div
                style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(255, 255, 255); -webkit-border-radius: 50%; border-radius: 50%; opacity: 0;"
              />
            </div>
          </span>
          <span>
            <div
              class="rc-swatch"
              style="background: rgb(128, 128, 128); width: 15px; height: 15px; float: left; margin-right: 5px; margin-bottom: 5px; position: relative; cursor: pointer;"
              tabindex="0"
              title="#808080"
            >
              <div
                style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(0, 0, 0); -webkit-border-radius: 50%; border-radius: 50%; opacity: 0;"
              />
            </div>
          </span>
          <span>
            <div
              class="rc-swatch"
              style="background: rgb(204, 204, 204); width: 15px; height: 15px; float: left; margin-right: 5px; margin-bottom: 5px; position: relative; cursor: pointer;"
              tabindex="0"
              title="#cccccc"
            >
              <div
                style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(0, 0, 0); -webkit-border-radius: 50%; border-radius: 50%; opacity: 0;"
              />
            </div>
          </span>
          <span>
            <div
              class="rc-swatch"
              style="background: rgb(211, 49, 21); width: 15px; height: 15px; float: left; margin-right: 5px; margin-bottom: 5px; position: relative; cursor: pointer;"
              tabindex="0"
              title="#D33115"
            >
              <div
                style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(255, 255, 255); -webkit-border-radius: 50%; border-radius: 50%; opacity: 0;"
              />
            </div>
          </span>
          <span>
            <div
              class="rc-swatch"
              style="background: rgb(226, 115, 0); width: 15px; height: 15px; float: left; margin-right: 5px; margin-bottom: 5px; position: relative; cursor: pointer;"
              tabindex="0"
              title="#E27300"
            >
              <div
                style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(0, 0, 0); -webkit-border-radius: 50%; border-radius: 50%; opacity: 0;"
              />
            </div>
          </span>
          <span>
            <div
              class="rc-swatch"
              style="background: rgb(252, 196, 0); width: 15px; height: 15px; float: left; margin-right: 5px; margin-bottom: 5px; position: relative; cursor: pointer;"
              tabindex="0"
              title="#FCC400"
            >
              <div
                style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(0, 0, 0); -webkit-border-radius: 50%; border-radius: 50%; opacity: 0;"
              />
            </div>
          </span>
          <span>
            <div
              class="rc-swatch"
              style="background: rgb(176, 188, 0); width: 15px; height: 15px; float: left; margin-right: 5px; margin-bottom: 5px; position: relative; cursor: pointer;"
              tabindex="0"
              title="#B0BC00"
            >
              <div
                style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(0, 0, 0); -webkit-border-radius: 50%; border-radius: 50%; opacity: 0;"
              />
            </div>
          </span>
          <span>
            <div
              class="rc-swatch"
              style="background: rgb(104, 188, 0); width: 15px; height: 15px; float: left; margin-right: 5px; margin-bottom: 5px; position: relative; cursor: pointer;"
              tabindex="0"
              title="#68BC00"
            >
              <div
                style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(0, 0, 0); -webkit-border-radius: 50%; border-radius: 50%; opacity: 0;"
              />
            </div>
          </span>
          <span>
            <div
              class="rc-swatch"
              style="background: rgb(22, 165, 165); width: 15px; height: 15px; float: left; margin-right: 5px; margin-bottom: 5px; position: relative; cursor: pointer;"
              tabindex="0"
              title="#16A5A5"
            >
              <div
                style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(255, 255, 255); -webkit-border-radius: 50%; border-radius: 50%; opacity: 0;"
              />
            </div>
          </span>
          <span>
            <div
              class="rc-swatch"
              style="background: rgb(0, 156, 224); width: 15px; height: 15px; float: left; margin-right: 5px; margin-bottom: 5px; position: relative; cursor: pointer;"
              tabindex="0"
              title="#009CE0"
            >
              <div
                style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(255, 255, 255); -webkit-border-radius: 50%; border-radius: 50%; opacity: 0;"
              />
            </div>
          </span>
          <span>
            <div
              class="rc-swatch"
              style="background: rgb(123, 100, 255); width: 15px; height: 15px; float: left; margin-right: 5px; margin-bottom: 5px; position: relative; cursor: pointer;"
              tabindex="0"
              title="#7B64FF"
            >
              <div
                style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(255, 255, 255); -webkit-border-radius: 50%; border-radius: 50%; opacity: 0;"
              />
            </div>
          </span>
          <span>
            <div
              class="rc-swatch"
              style="background: rgb(250, 40, 255); width: 15px; height: 15px; float: left; margin-right: 5px; margin-bottom: 5px; position: relative; cursor: pointer;"
              tabindex="0"
              title="#FA28FF"
            >
              <div
                style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(255, 255, 255); -webkit-border-radius: 50%; border-radius: 50%; opacity: 0;"
              />
            </div>
          </span>
          <span>
            <div
              class="rc-swatch"
              style="background: rgb(0, 0, 0); width: 15px; height: 15px; float: left; margin-right: 5px; margin-bottom: 5px; position: relative; cursor: pointer;"
              tabindex="0"
              title="#000000"
            >
              <div
                style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(255, 255, 255); -webkit-border-radius: 50%; border-radius: 50%; opacity: 0;"
              />
            </div>
          </span>
          <span>
            <div
              class="rc-swatch"
              style="background: rgb(102, 102, 102); width: 15px; height: 15px; float: left; margin-right: 5px; margin-bottom: 5px; position: relative; cursor: pointer;"
              tabindex="0"
              title="#666666"
            >
              <div
                style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(255, 255, 255); -webkit-border-radius: 50%; border-radius: 50%; opacity: 0;"
              />
            </div>
          </span>
          <span>
            <div
              class="rc-swatch"
              style="background: rgb(179, 179, 179); width: 15px; height: 15px; float: left; margin-right: 5px; margin-bottom: 5px; position: relative; cursor: pointer;"
              tabindex="0"
              title="#B3B3B3"
            >
              <div
                style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(0, 0, 0); -webkit-border-radius: 50%; border-radius: 50%; opacity: 0;"
              />
            </div>
          </span>
          <span>
            <div
              class="rc-swatch"
              style="background: rgb(159, 5, 0); width: 15px; height: 15px; float: left; margin-right: 5px; margin-bottom: 5px; position: relative; cursor: pointer;"
              tabindex="0"
              title="#9F0500"
            >
              <div
                style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(255, 255, 255); -webkit-border-radius: 50%; border-radius: 50%; opacity: 0;"
              />
            </div>
          </span>
          <span>
            <div
              class="rc-swatch"
              style="background: rgb(196, 81, 0); width: 15px; height: 15px; float: left; margin-right: 5px; margin-bottom: 5px; position: relative; cursor: pointer;"
              tabindex="0"
              title="#C45100"
            >
              <div
                style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(255, 255, 255); -webkit-border-radius: 50%; border-radius: 50%; opacity: 0;"
              />
            </div>
          </span>
          <span>
            <div
              class="rc-swatch"
              style="background: rgb(251, 158, 0); width: 15px; height: 15px; float: left; margin-right: 5px; margin-bottom: 5px; position: relative; cursor: pointer;"
              tabindex="0"
              title="#FB9E00"
            >
              <div
                style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(0, 0, 0); -webkit-border-radius: 50%; border-radius: 50%; opacity: 0;"
              />
            </div>
          </span>
          <span>
            <div
              class="rc-swatch"
              style="background: rgb(128, 137, 0); width: 15px; height: 15px; float: left; margin-right: 5px; margin-bottom: 5px; position: relative; cursor: pointer;"
              tabindex="0"
              title="#808900"
            >
              <div
                style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(255, 255, 255); -webkit-border-radius: 50%; border-radius: 50%; opacity: 0;"
              />
            </div>
          </span>
          <span>
            <div
              class="rc-swatch"
              style="background: rgb(25, 77, 51); width: 15px; height: 15px; float: left; margin-right: 5px; margin-bottom: 5px; position: relative; cursor: pointer;"
              tabindex="0"
              title="#194D33"
            >
              <div
                style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(255, 255, 255); -webkit-border-radius: 50%; border-radius: 50%; opacity: 0;"
              />
            </div>
          </span>
          <span>
            <div
              class="rc-swatch"
              style="background: rgb(12, 121, 125); width: 15px; height: 15px; float: left; margin-right: 5px; margin-bottom: 5px; position: relative; cursor: pointer;"
              tabindex="0"
              title="#0C797D"
            >
              <div
                style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(255, 255, 255); -webkit-border-radius: 50%; border-radius: 50%; opacity: 0;"
              />
            </div>
          </span>
          <span>
            <div
              class="rc-swatch"
              style="background: rgb(0, 98, 177); width: 15px; height: 15px; float: left; margin-right: 5px; margin-bottom: 5px; position: relative; cursor: pointer;"
              tabindex="0"
              title="#0062B1"
            >
              <div
                style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(255, 255, 255); -webkit-border-radius: 50%; border-radius: 50%; opacity: 0;"
              />
            </div>
          </span>
          <span>
            <div
              class="rc-swatch"
              style="background: rgb(101, 50, 148); width: 15px; height: 15px; float: left; margin-right: 5px; margin-bottom: 5px; position: relative; cursor: pointer;"
              tabindex="0"
              title="#653294"
            >
              <div
                style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(255, 255, 255); -webkit-border-radius: 50%; border-radius: 50%; opacity: 0;"
              />
            </div>
          </span>
          <span>
            <div
              class="rc-swatch"
              style="background: rgb(171, 20, 158); width: 15px; height: 15px; float: left; margin-right: 5px; margin-bottom: 5px; position: relative; cursor: pointer;"
              tabindex="0"
              title="#AB149E"
            >
              <div
                style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(255, 255, 255); -webkit-border-radius: 50%; border-radius: 50%; opacity: 0;"
              />
            </div>
          </span>
          <div
            style="clear: both;"
          />
        </div>
        <div
          class="flexbox-fix"
          style="display: flex; padding-bottom: 6px; padding-right: 5px; position: relative;"
        >
          <div
            style="position: absolute; top: 6px; left: 5px; height: 9px; width: 9px; background: rgb(34, 25, 77);"
          />
          <div
            class="rc-editable-input"
            style="flex: 6 1 0%; position: relative;"
          >
            <input
              class="rc-editable-input__input"
              id="rc-editable-input-1"
              spellcheck="false"
              style="width: 80%; padding: 0px 0px 0px 20%; border: medium; outline: none; background: none; font-size: 12px; color: rgb(51, 51, 51); height: 16px;"
              value="#22194D"
            />
            <label
              class="rc-editable-input__label"
              for="rc-editable-input-1"
              style="display: none;"
            >
              hex
            </label>
          </div>
          <div
            class="rc-editable-input"
            style="flex: 3 1 0%; position: relative;"
          >
            <input
              class="rc-editable-input__input"
              id="rc-editable-input-2"
              spellcheck="false"
              style="width: 70%; padding: 0px 0px 0px 30%; border: medium; outline: none; background: none; font-size: 12px; color: rgb(51, 51, 51); height: 16px;"
              value="34"
            />
            <label
              class="rc-editable-input__label"
              for="rc-editable-input-2"
              style="position: absolute; top: 3px; left: 0px; line-height: 16px; text-transform: uppercase; font-size: 12px; color: rgb(153, 153, 153);"
            >
              r
            </label>
          </div>
          <div
            class="rc-editable-input"
            style="flex: 3 1 0%; position: relative;"
          >
            <input
              class="rc-editable-input__input"
              id="rc-editable-input-3"
              spellcheck="false"
              style="width: 70%; padding: 0px 0px 0px 30%; border: medium; outline: none; background: none; font-size: 12px; color: rgb(51, 51, 51); height: 16px;"
              value="25"
            />
            <label
              class="rc-editable-input__label"
              for="rc-editable-input-3"
              style="position: absolute; top: 3px; left: 0px; line-height: 16px; text-transform: uppercase; font-size: 12px; color: rgb(153, 153, 153);"
            >
              g
            </label>
          </div>
          <div
            class="rc-editable-input"
            style="flex: 3 1 0%; position: relative;"
          >
            <input
              class="rc-editable-input__input"
              id="rc-editable-input-4"
              spellcheck="false"
              style="width: 70%; padding: 0px 0px 0px 30%; border: medium; outline: none; background: none; font-size: 12px; color: rgb(51, 51, 51); height: 16px;"
              value="77"
            />
            <label
              class="rc-editable-input__label"
              for="rc-editable-input-4"
              style="position: absolute; top: 3px; left: 0px; line-height: 16px; text-transform: uppercase; font-size: 12px; color: rgb(153, 153, 153);"
            >
              b
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Compact with onSwatchHover renders correctly 1`] = `
<DocumentFragment>
  <div
    class="rc-raised"
  >
    <div
      class="rc-raised__bg"
      style="box-shadow: 0 2px 10px rgba(0,0,0,.12), 0 2px 5px rgba(0,0,0,.16); border-radius: 2px; background: rgb(246, 246, 246);"
    />
    <div
      class="rc-raised__content"
    >
      <div
        class="rc-compact compact-picker"
        style="padding-top: 5px; padding-left: 5px; box-sizing: initial; width: 240px;"
      >
        <div>
          <span>
            <div
              class="rc-swatch"
              style="background: rgb(77, 77, 77); width: 15px; height: 15px; float: left; margin-right: 5px; margin-bottom: 5px; position: relative; cursor: pointer;"
              tabindex="0"
              title="#4D4D4D"
            >
              <div
                style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(255, 255, 255); -webkit-border-radius: 50%; border-radius: 50%; opacity: 0;"
              />
            </div>
          </span>
          <span>
            <div
              class="rc-swatch"
              style="background: rgb(153, 153, 153); width: 15px; height: 15px; float: left; margin-right: 5px; margin-bottom: 5px; position: relative; cursor: pointer;"
              tabindex="0"
              title="#999999"
            >
              <div
                style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(0, 0, 0); -webkit-border-radius: 50%; border-radius: 50%; opacity: 0;"
              />
            </div>
          </span>
          <span>
            <div
              class="rc-swatch"
              style="background: rgb(255, 255, 255); width: 15px; height: 15px; float: left; margin-right: 5px; margin-bottom: 5px; position: relative; cursor: pointer; -webkit-box-shadow: inset 0 0 0 1px #ddd; box-shadow: inset 0 0 0 1px #ddd;"
              tabindex="0"
              title="#FFFFFF"
            >
              <div
                style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(0, 0, 0); -webkit-border-radius: 50%; border-radius: 50%; opacity: 0;"
              />
            </div>
          </span>
          <span>
            <div
              class="rc-swatch"
              style="background: rgb(244, 78, 59); width: 15px; height: 15px; float: left; margin-right: 5px; margin-bottom: 5px; position: relative; cursor: pointer;"
              tabindex="0"
              title="#F44E3B"
            >
              <div
                style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(255, 255, 255); -webkit-border-radius: 50%; border-radius: 50%; opacity: 0;"
              />
            </div>
          </span>
          <span>
            <div
              class="rc-swatch"
              style="background: rgb(254, 146, 0); width: 15px; height: 15px; float: left; margin-right: 5px; margin-bottom: 5px; position: relative; cursor: pointer;"
              tabindex="0"
              title="#FE9200"
            >
              <div
                style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(0, 0, 0); -webkit-border-radius: 50%; border-radius: 50%; opacity: 0;"
              />
            </div>
          </span>
          <span>
            <div
              class="rc-swatch"
              style="background: rgb(252, 220, 0); width: 15px; height: 15px; float: left; margin-right: 5px; margin-bottom: 5px; position: relative; cursor: pointer;"
              tabindex="0"
              title="#FCDC00"
            >
              <div
                style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(0, 0, 0); -webkit-border-radius: 50%; border-radius: 50%; opacity: 0;"
              />
            </div>
          </span>
          <span>
            <div
              class="rc-swatch"
              style="background: rgb(219, 223, 0); width: 15px; height: 15px; float: left; margin-right: 5px; margin-bottom: 5px; position: relative; cursor: pointer;"
              tabindex="0"
              title="#DBDF00"
            >
              <div
                style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(0, 0, 0); -webkit-border-radius: 50%; border-radius: 50%; opacity: 0;"
              />
            </div>
          </span>
          <span>
            <div
              class="rc-swatch"
              style="background: rgb(164, 221, 0); width: 15px; height: 15px; float: left; margin-right: 5px; margin-bottom: 5px; position: relative; cursor: pointer;"
              tabindex="0"
              title="#A4DD00"
            >
              <div
                style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(0, 0, 0); -webkit-border-radius: 50%; border-radius: 50%; opacity: 0;"
              />
            </div>
          </span>
          <span>
            <div
              class="rc-swatch"
              style="background: rgb(104, 204, 202); width: 15px; height: 15px; float: left; margin-right: 5px; margin-bottom: 5px; position: relative; cursor: pointer;"
              tabindex="0"
              title="#68CCCA"
            >
              <div
                style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(0, 0, 0); -webkit-border-radius: 50%; border-radius: 50%; opacity: 0;"
              />
            </div>
          </span>
          <span>
            <div
              class="rc-swatch"
              style="background: rgb(115, 216, 255); width: 15px; height: 15px; float: left; margin-right: 5px; margin-bottom: 5px; position: relative; cursor: pointer;"
              tabindex="0"
              title="#73D8FF"
            >
              <div
                style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(0, 0, 0); -webkit-border-radius: 50%; border-radius: 50%; opacity: 0;"
              />
            </div>
          </span>
          <span>
            <div
              class="rc-swatch"
              style="background: rgb(174, 161, 255); width: 15px; height: 15px; float: left; margin-right: 5px; margin-bottom: 5px; position: relative; cursor: pointer;"
              tabindex="0"
              title="#AEA1FF"
            >
              <div
                style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(0, 0, 0); -webkit-border-radius: 50%; border-radius: 50%; opacity: 0;"
              />
            </div>
          </span>
          <span>
            <div
              class="rc-swatch"
              style="background: rgb(253, 161, 255); width: 15px; height: 15px; float: left; margin-right: 5px; margin-bottom: 5px; position: relative; cursor: pointer;"
              tabindex="0"
              title="#FDA1FF"
            >
              <div
                style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(0, 0, 0); -webkit-border-radius: 50%; border-radius: 50%; opacity: 0;"
              />
            </div>
          </span>
          <span>
            <div
              class="rc-swatch"
              style="background: rgb(51, 51, 51); width: 15px; height: 15px; float: left; margin-right: 5px; margin-bottom: 5px; position: relative; cursor: pointer;"
              tabindex="0"
              title="#333333"
            >
              <div
                style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(255, 255, 255); -webkit-border-radius: 50%; border-radius: 50%; opacity: 0;"
              />
            </div>
          </span>
          <span>
            <div
              class="rc-swatch"
              style="background: rgb(128, 128, 128); width: 15px; height: 15px; float: left; margin-right: 5px; margin-bottom: 5px; position: relative; cursor: pointer;"
              tabindex="0"
              title="#808080"
            >
              <div
                style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(0, 0, 0); -webkit-border-radius: 50%; border-radius: 50%; opacity: 0;"
              />
            </div>
          </span>
          <span>
            <div
              class="rc-swatch"
              style="background: rgb(204, 204, 204); width: 15px; height: 15px; float: left; margin-right: 5px; margin-bottom: 5px; position: relative; cursor: pointer;"
              tabindex="0"
              title="#cccccc"
            >
              <div
                style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(0, 0, 0); -webkit-border-radius: 50%; border-radius: 50%; opacity: 0;"
              />
            </div>
          </span>
          <span>
            <div
              class="rc-swatch"
              style="background: rgb(211, 49, 21); width: 15px; height: 15px; float: left; margin-right: 5px; margin-bottom: 5px; position: relative; cursor: pointer;"
              tabindex="0"
              title="#D33115"
            >
              <div
                style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(255, 255, 255); -webkit-border-radius: 50%; border-radius: 50%; opacity: 0;"
              />
            </div>
          </span>
          <span>
            <div
              class="rc-swatch"
              style="background: rgb(226, 115, 0); width: 15px; height: 15px; float: left; margin-right: 5px; margin-bottom: 5px; position: relative; cursor: pointer;"
              tabindex="0"
              title="#E27300"
            >
              <div
                style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(0, 0, 0); -webkit-border-radius: 50%; border-radius: 50%; opacity: 0;"
              />
            </div>
          </span>
          <span>
            <div
              class="rc-swatch"
              style="background: rgb(252, 196, 0); width: 15px; height: 15px; float: left; margin-right: 5px; margin-bottom: 5px; position: relative; cursor: pointer;"
              tabindex="0"
              title="#FCC400"
            >
              <div
                style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(0, 0, 0); -webkit-border-radius: 50%; border-radius: 50%; opacity: 0;"
              />
            </div>
          </span>
          <span>
            <div
              class="rc-swatch"
              style="background: rgb(176, 188, 0); width: 15px; height: 15px; float: left; margin-right: 5px; margin-bottom: 5px; position: relative; cursor: pointer;"
              tabindex="0"
              title="#B0BC00"
            >
              <div
                style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(0, 0, 0); -webkit-border-radius: 50%; border-radius: 50%; opacity: 0;"
              />
            </div>
          </span>
          <span>
            <div
              class="rc-swatch"
              style="background: rgb(104, 188, 0); width: 15px; height: 15px; float: left; margin-right: 5px; margin-bottom: 5px; position: relative; cursor: pointer;"
              tabindex="0"
              title="#68BC00"
            >
              <div
                style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(0, 0, 0); -webkit-border-radius: 50%; border-radius: 50%; opacity: 0;"
              />
            </div>
          </span>
          <span>
            <div
              class="rc-swatch"
              style="background: rgb(22, 165, 165); width: 15px; height: 15px; float: left; margin-right: 5px; margin-bottom: 5px; position: relative; cursor: pointer;"
              tabindex="0"
              title="#16A5A5"
            >
              <div
                style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(255, 255, 255); -webkit-border-radius: 50%; border-radius: 50%; opacity: 0;"
              />
            </div>
          </span>
          <span>
            <div
              class="rc-swatch"
              style="background: rgb(0, 156, 224); width: 15px; height: 15px; float: left; margin-right: 5px; margin-bottom: 5px; position: relative; cursor: pointer;"
              tabindex="0"
              title="#009CE0"
            >
              <div
                style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(255, 255, 255); -webkit-border-radius: 50%; border-radius: 50%; opacity: 0;"
              />
            </div>
          </span>
          <span>
            <div
              class="rc-swatch"
              style="background: rgb(123, 100, 255); width: 15px; height: 15px; float: left; margin-right: 5px; margin-bottom: 5px; position: relative; cursor: pointer;"
              tabindex="0"
              title="#7B64FF"
            >
              <div
                style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(255, 255, 255); -webkit-border-radius: 50%; border-radius: 50%; opacity: 0;"
              />
            </div>
          </span>
          <span>
            <div
              class="rc-swatch"
              style="background: rgb(250, 40, 255); width: 15px; height: 15px; float: left; margin-right: 5px; margin-bottom: 5px; position: relative; cursor: pointer;"
              tabindex="0"
              title="#FA28FF"
            >
              <div
                style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(255, 255, 255); -webkit-border-radius: 50%; border-radius: 50%; opacity: 0;"
              />
            </div>
          </span>
          <span>
            <div
              class="rc-swatch"
              style="background: rgb(0, 0, 0); width: 15px; height: 15px; float: left; margin-right: 5px; margin-bottom: 5px; position: relative; cursor: pointer;"
              tabindex="0"
              title="#000000"
            >
              <div
                style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(255, 255, 255); -webkit-border-radius: 50%; border-radius: 50%; opacity: 0;"
              />
            </div>
          </span>
          <span>
            <div
              class="rc-swatch"
              style="background: rgb(102, 102, 102); width: 15px; height: 15px; float: left; margin-right: 5px; margin-bottom: 5px; position: relative; cursor: pointer;"
              tabindex="0"
              title="#666666"
            >
              <div
                style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(255, 255, 255); -webkit-border-radius: 50%; border-radius: 50%; opacity: 0;"
              />
            </div>
          </span>
          <span>
            <div
              class="rc-swatch"
              style="background: rgb(179, 179, 179); width: 15px; height: 15px; float: left; margin-right: 5px; margin-bottom: 5px; position: relative; cursor: pointer;"
              tabindex="0"
              title="#B3B3B3"
            >
              <div
                style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(0, 0, 0); -webkit-border-radius: 50%; border-radius: 50%; opacity: 0;"
              />
            </div>
          </span>
          <span>
            <div
              class="rc-swatch"
              style="background: rgb(159, 5, 0); width: 15px; height: 15px; float: left; margin-right: 5px; margin-bottom: 5px; position: relative; cursor: pointer;"
              tabindex="0"
              title="#9F0500"
            >
              <div
                style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(255, 255, 255); -webkit-border-radius: 50%; border-radius: 50%; opacity: 0;"
              />
            </div>
          </span>
          <span>
            <div
              class="rc-swatch"
              style="background: rgb(196, 81, 0); width: 15px; height: 15px; float: left; margin-right: 5px; margin-bottom: 5px; position: relative; cursor: pointer;"
              tabindex="0"
              title="#C45100"
            >
              <div
                style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(255, 255, 255); -webkit-border-radius: 50%; border-radius: 50%; opacity: 0;"
              />
            </div>
          </span>
          <span>
            <div
              class="rc-swatch"
              style="background: rgb(251, 158, 0); width: 15px; height: 15px; float: left; margin-right: 5px; margin-bottom: 5px; position: relative; cursor: pointer;"
              tabindex="0"
              title="#FB9E00"
            >
              <div
                style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(0, 0, 0); -webkit-border-radius: 50%; border-radius: 50%; opacity: 0;"
              />
            </div>
          </span>
          <span>
            <div
              class="rc-swatch"
              style="background: rgb(128, 137, 0); width: 15px; height: 15px; float: left; margin-right: 5px; margin-bottom: 5px; position: relative; cursor: pointer;"
              tabindex="0"
              title="#808900"
            >
              <div
                style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(255, 255, 255); -webkit-border-radius: 50%; border-radius: 50%; opacity: 0;"
              />
            </div>
          </span>
          <span>
            <div
              class="rc-swatch"
              style="background: rgb(25, 77, 51); width: 15px; height: 15px; float: left; margin-right: 5px; margin-bottom: 5px; position: relative; cursor: pointer;"
              tabindex="0"
              title="#194D33"
            >
              <div
                style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(255, 255, 255); -webkit-border-radius: 50%; border-radius: 50%; opacity: 0;"
              />
            </div>
          </span>
          <span>
            <div
              class="rc-swatch"
              style="background: rgb(12, 121, 125); width: 15px; height: 15px; float: left; margin-right: 5px; margin-bottom: 5px; position: relative; cursor: pointer;"
              tabindex="0"
              title="#0C797D"
            >
              <div
                style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(255, 255, 255); -webkit-border-radius: 50%; border-radius: 50%; opacity: 0;"
              />
            </div>
          </span>
          <span>
            <div
              class="rc-swatch"
              style="background: rgb(0, 98, 177); width: 15px; height: 15px; float: left; margin-right: 5px; margin-bottom: 5px; position: relative; cursor: pointer;"
              tabindex="0"
              title="#0062B1"
            >
              <div
                style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(255, 255, 255); -webkit-border-radius: 50%; border-radius: 50%; opacity: 0;"
              />
            </div>
          </span>
          <span>
            <div
              class="rc-swatch"
              style="background: rgb(101, 50, 148); width: 15px; height: 15px; float: left; margin-right: 5px; margin-bottom: 5px; position: relative; cursor: pointer;"
              tabindex="0"
              title="#653294"
            >
              <div
                style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(255, 255, 255); -webkit-border-radius: 50%; border-radius: 50%; opacity: 0;"
              />
            </div>
          </span>
          <span>
            <div
              class="rc-swatch"
              style="background: rgb(171, 20, 158); width: 15px; height: 15px; float: left; margin-right: 5px; margin-bottom: 5px; position: relative; cursor: pointer;"
              tabindex="0"
              title="#AB149E"
            >
              <div
                style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(255, 255, 255); -webkit-border-radius: 50%; border-radius: 50%; opacity: 0;"
              />
            </div>
          </span>
          <div
            style="clear: both;"
          />
        </div>
        <div
          class="flexbox-fix"
          style="display: flex; padding-bottom: 6px; padding-right: 5px; position: relative;"
        >
          <div
            style="position: absolute; top: 6px; left: 5px; height: 9px; width: 9px; background: rgb(34, 25, 77);"
          />
          <div
            class="rc-editable-input"
            style="flex: 6 1 0%; position: relative;"
          >
            <input
              class="rc-editable-input__input"
              id="rc-editable-input-5"
              spellcheck="false"
              style="width: 80%; padding: 0px 0px 0px 20%; border: medium; outline: none; background: none; font-size: 12px; color: rgb(51, 51, 51); height: 16px;"
              value="#22194D"
            />
            <label
              class="rc-editable-input__label"
              for="rc-editable-input-5"
              style="display: none;"
            >
              hex
            </label>
          </div>
          <div
            class="rc-editable-input"
            style="flex: 3 1 0%; position: relative;"
          >
            <input
              class="rc-editable-input__input"
              id="rc-editable-input-6"
              spellcheck="false"
              style="width: 70%; padding: 0px 0px 0px 30%; border: medium; outline: none; background: none; font-size: 12px; color: rgb(51, 51, 51); height: 16px;"
              value="34"
            />
            <label
              class="rc-editable-input__label"
              for="rc-editable-input-6"
              style="position: absolute; top: 3px; left: 0px; line-height: 16px; text-transform: uppercase; font-size: 12px; color: rgb(153, 153, 153);"
            >
              r
            </label>
          </div>
          <div
            class="rc-editable-input"
            style="flex: 3 1 0%; position: relative;"
          >
            <input
              class="rc-editable-input__input"
              id="rc-editable-input-7"
              spellcheck="false"
              style="width: 70%; padding: 0px 0px 0px 30%; border: medium; outline: none; background: none; font-size: 12px; color: rgb(51, 51, 51); height: 16px;"
              value="25"
            />
            <label
              class="rc-editable-input__label"
              for="rc-editable-input-7"
              style="position: absolute; top: 3px; left: 0px; line-height: 16px; text-transform: uppercase; font-size: 12px; color: rgb(153, 153, 153);"
            >
              g
            </label>
          </div>
          <div
            class="rc-editable-input"
            style="flex: 3 1 0%; position: relative;"
          >
            <input
              class="rc-editable-input__input"
              id="rc-editable-input-8"
              spellcheck="false"
              style="width: 70%; padding: 0px 0px 0px 30%; border: medium; outline: none; background: none; font-size: 12px; color: rgb(51, 51, 51); height: 16px;"
              value="77"
            />
            <label
              class="rc-editable-input__label"
              for="rc-editable-input-8"
              style="position: absolute; top: 3px; left: 0px; line-height: 16px; text-transform: uppercase; font-size: 12px; color: rgb(153, 153, 153);"
            >
              b
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CompactColor renders correctly 1`] = `
<DocumentFragment>
  <span>
    <div
      class="rc-swatch"
      style="width: 15px; height: 15px; float: left; margin-right: 5px; margin-bottom: 5px; position: relative; cursor: pointer;"
      tabindex="0"
    >
      <div
        style="position: absolute; top: 5px; right: 5px; bottom: 5px; left: 5px; background: rgb(255, 255, 255); -webkit-border-radius: 50%; border-radius: 50%; opacity: 0;"
      />
    </div>
  </span>
</DocumentFragment>
`;

exports[`CompactFields renders correctly 1`] = `
<DocumentFragment>
  <div
    class="flexbox-fix"
    style="display: flex; padding-bottom: 6px; padding-right: 5px; position: relative;"
  >
    <div
      style="position: absolute; top: 6px; left: 5px; height: 9px; width: 9px; background: rgb(255, 0, 0);"
    />
    <div
      class="rc-editable-input"
      style="flex: 6 1 0%; position: relative;"
    >
      <input
        class="rc-editable-input__input"
        id="rc-editable-input-17"
        spellcheck="false"
        style="width: 80%; padding: 0px 0px 0px 20%; border: medium; outline: none; background: none; font-size: 12px; color: rgb(51, 51, 51); height: 16px;"
        value="#FF0000"
      />
      <label
        class="rc-editable-input__label"
        for="rc-editable-input-17"
        style="display: none;"
      >
        hex
      </label>
    </div>
    <div
      class="rc-editable-input"
      style="flex: 3 1 0%; position: relative;"
    >
      <input
        class="rc-editable-input__input"
        id="rc-editable-input-18"
        spellcheck="false"
        style="width: 70%; padding: 0px 0px 0px 30%; border: medium; outline: none; background: none; font-size: 12px; color: rgb(51, 51, 51); height: 16px;"
        value="255"
      />
      <label
        class="rc-editable-input__label"
        for="rc-editable-input-18"
        style="position: absolute; top: 3px; left: 0px; line-height: 16px; text-transform: uppercase; font-size: 12px; color: rgb(153, 153, 153);"
      >
        r
      </label>
    </div>
    <div
      class="rc-editable-input"
      style="flex: 3 1 0%; position: relative;"
    >
      <input
        class="rc-editable-input__input"
        id="rc-editable-input-19"
        spellcheck="false"
        style="width: 70%; padding: 0px 0px 0px 30%; border: medium; outline: none; background: none; font-size: 12px; color: rgb(51, 51, 51); height: 16px;"
        value="0"
      />
      <label
        class="rc-editable-input__label"
        for="rc-editable-input-19"
        style="position: absolute; top: 3px; left: 0px; line-height: 16px; text-transform: uppercase; font-size: 12px; color: rgb(153, 153, 153);"
      >
        g
      </label>
    </div>
    <div
      class="rc-editable-input"
      style="flex: 3 1 0%; position: relative;"
    >
      <input
        class="rc-editable-input__input"
        id="rc-editable-input-20"
        spellcheck="false"
        style="width: 70%; padding: 0px 0px 0px 30%; border: medium; outline: none; background: none; font-size: 12px; color: rgb(51, 51, 51); height: 16px;"
        value="0"
      />
      <label
        class="rc-editable-input__label"
        for="rc-editable-input-20"
        style="position: absolute; top: 3px; left: 0px; line-height: 16px; text-transform: uppercase; font-size: 12px; color: rgb(153, 153, 153);"
      >
        b
      </label>
    </div>
  </div>
</DocumentFragment>
`;
